--- a/Reddit CSS/public_html/less/rapbattles/linkflairs.less
+++ b/Reddit CSS/public_html/less/rapbattles/linkflairs.less
@@ -17,6 +17,7 @@
     width: 300px !important;
     transition-duration: @theme-anim-transition;
     transition-property: width, font-size, text-indent;
+    overflow: visible;
   }
 }
 
